Fix right z-index to 1000

--- a/css/style.css
+++ b/css/style.css
@@ -656,7 +656,7 @@ nav #menu li a:hover {
 }
 
 #resize {
-  z-index: 1;
+  z-index: 1000;
   top: 0px;
   position: fixed;
   background: linear-gradient(
